Fixing some routing errors and changed some verbiage

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,10 +12,10 @@
                     <ul class="nav">
                         <li><%= link_to 'Home',  root_path %></li>
                         <li><%= link_to 'About',  about_path %></li>
-                        <li><%= link_to 'Contact',  "about/contact" %></li>
-                        <li><%= link_to 'FAQ',  "about/faq" %></li>
-                        <li><%= link_to 'Become an Expert',  "become-an-expert" %></li>
-                        <li><%= link_to 'Legal',  "about/legal" %></li>
+                        <li><%= link_to 'Contact',  "/about/contact" %></li>
+                        <li><%= link_to 'FAQ',  "/about/faq" %></li>
+                        <li><%= link_to 'Become an Expert',  "/become-an-expert" %></li>
+                        <li><%= link_to 'Legal',  "/about/legal" %></li>
                     </ul>
                     <ul class="nav pull-right">
                                 <li><%= link_to 'Signup',  '#' %></li>
