--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>Welcome! </h1>
-    <p>to <%= link_to 'One Month Rails',  "http://onemonthrails.com" %>
-     </p>
+    <p>Lorious is the fastest way to get advice, tutoring and answers for anyone who needs help solving a problem because it enables instant video chat with world experts on any topic. By offering a platform for you to connect with experts, Lorious is your personal expert network.</p>
+    <p>More information coming soon!</p>
 
     <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
