--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<div class="jumbotron">
-        <h1>Confused?</h1>
-        <h4>Subject matter experts can help. You are seconds away from finding someone who can help you solve any problem you might have.</h4>
-        <h6>Why spend hours searching or reading textbooks when you could have a one-on-one conversation with someone who can help you?</h6>
+<div>
+        <h2>Your own personal expert network</h2>
+        <h4>Why struggle to solve that problem? You are seconds away from finding someone who can help.</h4>
+        <h6>Stop spending hours on forums or deciphering instruction manuals. Just ask someone.</h6>
     	<p> <%= link_to 'Get started today',  "test" , class: "btn btn-large btn-primary" %> </p>
 </div>
