Refine User Model

--- a/app/assets/stylesheets/bootstrap-additions.css.scss
+++ b/app/assets/stylesheets/bootstrap-additions.css.scss
@@ -104,6 +104,18 @@ only screen and (     -o-min-device-pixel-ratio: 2/1) {
 
 }
 
+
+/* Footer 
+------------------------- */
+.footer {
+  font-size: 12px;
+}
+
+.copyright {
+  font-size:10px;
+  font-weight:600;
+}
+
 /* Masthead (docs home)
 ------------------------- */
 .masthead {
