--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,11 @@
-<div class="footer">
-  <small>
-    <%= link_to "Lorious", "http://lorious.com" %> alpha v.001
-    by <%= link_to "Henry Hund", "http://henryhund.com" %>
-  </small>
+
+   <div class="navbar">
+   <p class="text-center footer">          
+	  <%= link_to 'Home',  root_path %>&nbsp;|&nbsp;
+	  <%= link_to 'About',  about_path %>&nbsp;|&nbsp;
+	  <%= link_to 'FAQ',  "/about/faq" %>&nbsp;|&nbsp;
+	  <%= link_to 'Become an Expert',  "/become-an-expert" %>&nbsp;|&nbsp;
+	  <%= link_to 'Legal',  "/about/legal" %>
+	</p>
+	<p class="text-center copyright">2013 Lorious</p>
 </div>
