--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,4 +2,4 @@
     <p>Lorious is the fastest way to get advice, tutoring and answers for anyone who needs help solving a problem because it enables instant video chat with world experts on any topic. By offering a platform for you to connect with experts, Lorious is your personal expert network.</p>
     <p>More information coming soon!</p>
 
-    <p> <%= link_to 'Sign up now!',  "#" , class: "btn btn-large btn-primary" %> </p>
+    <p> <%= link_to 'Sign up now!',  new_user_registration_path , class: "btn btn-large btn-primary" %> </p>
